--- a/index.html
+++ b/index.html
@@ -25,11 +25,7 @@ limitations under the License.
   <meta name="theme-color" content="#FF6F00">
 
   <script src="third_party/handlebars-v3.0.0.js"></script>
-  <script>
-  if (typeof window.Intl !== 'undefined') {
-    document.write('<script src="third_party/handlebars-intl.min.js"><\/script>');
-  }
-  </script>
+  <script src="third_party/handlebars-intl.min.js"></script>
 
   <script id="tmpl-story" type="text/x-handlebars-template">
     <h1 class="story__title">{{ title }}</h1>
